[gd_scene load_steps=3 format=3 uid="uid://4nod4a5gqte6"]

[ext_resource type="Script" path="res://Live/Speedrun/Leaderboard/LeaderboardCategory.gd" id="1_krw43"]

[sub_resource type="LabelSettings" id="LabelSettings_ni442"]

[node name="LeaderboardCategory" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
script = ExtResource("1_krw43")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.2, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Casual No HDFS (1.88+)"
label_settings = SubResource("LabelSettings_ni442")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.35, 0.35, 0.35, 1)

[node name="LeaderboardLabel" type="RichTextLabel" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[connection signal="meta_clicked" from="MarginContainer2/LeaderboardLabel" to="." method="_on_leaderboard_label_meta_clicked"]
